k8s/petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: zachyyyy/petclinic:latest
          ports:
            - containerPort: 9090   # ← Garder 9090
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090           # ← Garder 9090
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090           # ← Gardeer 9090
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80               # ← Port externe HTTP
      targetPort: 9090       # ← Port de l'application
  type: NodePort
